# DJANGOBYEXAMPLE

Blog/: pyproject.toml
Blog/mysite/blog/: models.py  urls.py  views.py
Blog/mysite/blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
Blog/mysite/blog/templates/blog/: base.html
Blog/mysite/mysite/: settings.py  urls.py
E-commerce/: .gitignore  pyproject.toml
E-commerce/myshop/cart/: cart.py  views.py
E-commerce/myshop/coupons/migrations/: 0001_initial.py
E-commerce/myshop/myshop/: settings.py
E-commerce/myshop/notes/: recommender.txt
E-commerce/myshop/orders/: admin.py  models.py  urls.py  views.py
E-commerce/myshop/orders/migrations/: 0001_initial.py  0002_order_braintree_id.py  0003_auto_20240111_1219.py
E-commerce/myshop/shop/: recommender.py  views.py
E-commerce/myshop/shop/migrations/: 0001_initial.py
E-learning_platform/: .gitignore  pyproject.toml
E-learning_platform/educa/api_examples/: enroll_all.py
E-learning_platform/educa/chat/: consumers.py  views.py
E-learning_platform/educa/config/: nginx.conf  uwsgi.ini
E-learning_platform/educa/courses/: admin.py  middleware.py  models.py  views.py
E-learning_platform/educa/courses/api/: serializers.py  views.py
E-learning_platform/educa/courses/fixtures/: subjects.json
E-learning_platform/educa/courses/migrations/: 0001_initial.py  0002_content_file_image_text_video.py  0003_auto_20240212_2118.py  0004_course_students.py
E-learning_platform/educa/courses/templates/: base.html
E-learning_platform/educa/educa/: asgi.py  urls.py
E-learning_platform/educa/educa/settings/: base.py  local.py  pro.py
E-learning_platform/educa/ssl/: educa.crt
SocialWebsite/: .gitignore  Taskfile.yml  pyproject.toml
SocialWebsite/bookmarks/: cert.crt  cert.key
SocialWebsite/bookmarks/account/: forms.py  urls.py  views.py
SocialWebsite/bookmarks/account/migrations/: 0001_initial.py
SocialWebsite/bookmarks/account/templates/: base.html
SocialWebsite/bookmarks/bookmarks/: settings.py  urls.py
SocialWebsite/bookmarks/images/: forms.py  models.py  views.py
SocialWebsite/bookmarks/images/migrations/: 0001_initial.py
(+9 files in other folders)
