[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3"
celery = "4.4.2"
flower = "0.9.3"
braintree = "3.59.0"
weasyprint = "51"
redis = "3.4.1"
autoflake = "^2.3.0"
black = "^24.2.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
