[tool.poetry]
name = "e-learning-platform"
version = "0.1.0"
description = ""
authors = ["mitya <dmitriyzhdan23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3"
pillow = "7.0.0"
django-braces = "1.14.0"
django-embed-video = "1.3.2"
python-memcached = "1.59"
django-memcache-status = "2.2"
djangorestframework = "3.11.0"
requests = "2.23"
channels = "2.4.0"
channels-redis = "2.4.2"
psycopg2-binary = "2.8.4"
uwsgi = "2.0.18"
autoflake = "^2.3.0"
black = "^24.2.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
