[tool.poetry]
name = "socialwebsite"
version = "0.1.0"
description = ""
authors = ["mitya <dmitriyzhdan23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "3"
black = "^23.12.1"
pillow = "7.0.0"
social-auth-app-django = "3.1.0"
django-extensions = "2.2.5"
werkzeug = "0.16.0"
pyopenssl = "^23.3.0"
certifi = "^2023.11.17"
easy-thumbnails = "2.7"
autoflake = "^2.3.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
